<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ejercicio2.MainActivityEjercicio2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/alarmasrestantes"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Alarmasrestante"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/numeroAlarmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="MissingClass">

        <TextView
            android:id="@+id/tiempoRestante"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tiempoREstante"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tiempo"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tiempo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#14B2A3"
            android:textColorLink="#2196F3"
            android:textStyle="bold" />
    </LinearLayout>
    <Button
        android:id="@+id/botonComenzar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/comenzar" />
    <Button
        android:id="@+id/botonAnadir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/Añadir" />
    <Button
        android:id="@+id/botonEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/Editar" />

</LinearLayout>
