<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    android:id ="@+id/layoutConversor"
    tools:context=".Ejercicio1.MainActivityEjercicio1">
    <EditText
        android:id="@+id/dolares"
        android:layout_width="177dp"
        android:layout_height="52dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/d_lares"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="125dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/labeldolares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dolares"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/euros"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/euros"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dolares" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/labeleuros"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/euros"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.171" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="271dp"
        android:layout_height="102dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/euros">

        <RadioButton
            android:id="@+id/eurosDolares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/euros_a_d_lares" />

        <RadioButton
            android:id="@+id/dolaresEuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d_lares_aeuros" />
    </RadioGroup>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="291dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/dolares"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonconv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/convertir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.138" />

</androidx.constraintlayout.widget.ConstraintLayout>